@startuml
' Gemini-CLI Generated Complete Class Diagram (Corrected Layers)

' Settings
skinparam classAttributeIconSize 0
skinparam linetype ortho

package "UI Layer" #AliceBlue {
    class MainWindow {
        + MainWindow(parent: QWidget* = nullptr)
        + ~MainWindow()
        __
        - on_toolButtonOpen_clicked()
        - onCurveCheckStateChanged(curveId: const QString&, checked: bool)
        - onProjectTreeContextMenuRequested(pos: const QPoint&)
        - onCurveAdded(curveId: const QString&)
        - onSimpleAlgorithmActionTriggered()
        - onMovingAverageAction()
        __
        - initRibbon()
        - initDockWidgets()
        - initCentral()
        - initStatusBar()
        - initComponents()
        - setupLeftDock()
        - setupRightDock()
        - createFileToolBar(): QToolBar*
        - createViewToolBar(): QToolBar*
        - createMathToolBar(): QToolBar*
        __
        - m_projectExplorer: ProjectExplorer*
        - m_curveTreeModel: CurveTreeModel*
        - m_chartView: PlotWidget*
        - m_projectExplorerDock: QDockWidget*
        - m_propertiesDock: QDockWidget*
        - m_curveManager: CurveManager*
        - m_mainController: MainController*
    }

    class MainController {
        + MainController(curveManager: CurveManager*, parent: QObject* = nullptr)
        + ~MainController()
        .. signals ..
        + curveAvailable(curve: const ThermalCurve&)
        + curveDataChanged(curveId: const QString&)
        .. public slots ..
        + onShowDataImport()
        + onAlgorithmRequested(algorithmName: const QString&)
        + onAlgorithmRequestedWithParams(algorithmName: const QString&, params: const QVariantMap&)
        .. private slots ..
        - onPreviewRequested(filePath: const QString&)
        - onImportTriggered()
        - onAlgorithmFinished(curveId: const QString&)
        __
        - m_curveManager: CurveManager*
        - m_dataImportWidget: DataImportWidget*
        - m_textFileReader: TextFileReader*
        - m_algorithmService: AlgorithmService*
    }

    class ProjectExplorer {
        + ProjectExplorer(parent: QWidget* = nullptr)
        + setModel(model: QAbstractItemModel*)
        + treeView(): QTreeView*
        .. signals ..
        + fileDoubleClicked(index: const QModelIndex&)
        __
        - m_treeView: QTreeView*
    }

    class CurveTreeModel {
        + CurveTreeModel(curveManager: CurveManager*, parent: QObject* = nullptr)
        + ~CurveTreeModel()
        + data(index: const QModelIndex&, role: int): QVariant
        + setData(index: const QModelIndex&, value: const QVariant&, role: int): bool
        + flags(index: const QModelIndex&): Qt::ItemFlags
        + headerData(section: int, orientation: Qt::Orientation, role: int): QVariant
        + index(row: int, column: int, parent: const QModelIndex&): QModelIndex
        + parent(index: const QModelIndex&): QModelIndex
        + rowCount(parent: const QModelIndex&): int
        + columnCount(parent: const QModelIndex&): int
        + getCurveId(index: const QModelIndex&): QString
        + getCheckedCurveIds(): QStringList
        + setCurveChecked(curveId: const QString&, checked: bool)
        .. public slots ..
        + onCurveAdded(curveId: const QString&)
        + onCurveRemoved(curveId: const QString&)
        + onCurvesCleared()
        + refresh()
        .. signals ..
        + curveCheckStateChanged(curveId: const QString&, checked: bool)
        __
        - buildTree()
        - findItem(curveId: const QString&, parent: TreeItem*): TreeItem*
        - m_curveManager: CurveManager*
        - m_rootItem: TreeItem*
        - m_checkedCurves: QSet<QString>
    }

    class TreeItem {
        + TreeItem(curveId: const QString&, parent: TreeItem* = nullptr)
        + TreeItem(projectName: const QString&, isProject: bool, parent: TreeItem* = nullptr)
        + ~TreeItem()
        + appendChild(child: TreeItem*)
        + removeChild(child: TreeItem*)
        + child(row: int): TreeItem*
        + childCount(): int
        + row(): int
        + parentItem(): TreeItem*
        + curveId(): QString
        + projectName(): QString
        + isProjectNode(): bool
        __
        - m_childItems: QList<TreeItem*>
        - m_parentItem: TreeItem*
        - m_curveId: QString
        - m_projectName: QString
        - m_isProjectNode: bool
    }

    class PlotWidget {
        + PlotWidget(curveManager: CurveManager*, parent: QWidget* = nullptr)
        + setHitTestBasePixelThreshold(px: qreal)
        + hitTestBasePixelThreshold(): qreal
        + setHitTestIncludePenWidth(enabled: bool)
        + hitTestIncludePenWidth(): bool
        .. public slots ..
        + addCurve(curve: const ThermalCurve&)
        + rescaleAxes()
        + setCurveVisible(curveId: const QString&, visible: bool)
        .. private slots ..
        - onCurveAdded(curveId: const QString&)
        - onCurveDataChanged(curveId: const QString&)
        - onCurveRemoved(curveId: const QString&)
        - onCurvesCleared()
        .. protected ..
        # mousePressEvent(event: QMouseEvent*)
        .. signals ..
        + curveSelected(curveId: const QString&)
        __
        - updateSeriesStyle(series: QLineSeries*, selected: bool)
        - setupConnections()
        - m_curveManager: CurveManager*
        - m_chartView: QChartView*
        - m_selectedSeries: QLineSeries*
        - m_seriesToId: QHash<QLineSeries*, QString>
        - m_idToSeries: QHash<QString, QLineSeries*>
        - m_axisX: QValueAxis*
        - m_axisY_primary: QValueAxis*
        - m_axisY_secondary: QValueAxis*
        - m_hitTestBasePx: qreal
        - m_hitTestIncludePen: bool
    }

    class DataImportWidget {
        + DataImportWidget(parent: QWidget* = nullptr)
        + getImportConfig(): QVariantMap
        .. public slots ..
        + setPreviewData(previewData: const FilePreviewData&)
        .. signals ..
        + importRequested()
        + previewRequested(filePath: const QString&)
        .. private slots ..
        - onBrowseFile()
        - onImportClicked()
        - onCloseClicked()
        __
        - createTemperatureGroup(): QWidget*
        - createTimeGroup(): QWidget*
        - createSignalGroup(): QWidget*
        - createRateGroup(): QWidget*
        ' (UI element pointers omitted for brevity)
    }
}

package "Application Layer" #Honeydew {
    class CurveManager {
        + CurveManager(parent: QObject* = nullptr)
        + ~CurveManager()
        + addCurve(curve: const ThermalCurve&)
        + loadCurveFromFile(filePath: const QString&): bool
        + processRawData(curveId: const QString&, columnMapping: const QMap<QString, int>&)
        + getCurve(curveId: const QString&): ThermalCurve*
        + getAllCurves(): const QMap<QString, ThermalCurve>&
        + clearCurves()
        + removeCurve(curveId: const QString&): bool
        + setActiveCurve(curveId: const QString&)
        + getActiveCurve(): ThermalCurve*
        .. signals ..
        + curveAdded(curveId: const QString&)
        + activeCurveChanged(curveId: const QString&)
        + curveDataChanged(curveId: const QString&)
        + curvesCleared()
        + curveRemoved(curveId: const QString&)
        __
        - registerDefaultReaders()
        - m_curves: QMap<QString, ThermalCurve>
        - m_readers: vector<unique_ptr<IFileReader>>
        - m_activeCurveId: QString
    }

    class AlgorithmService {
        + {static} instance(): AlgorithmService*
        + setCurveManager(manager: CurveManager*)
        + registerAlgorithm(algorithm: IThermalAlgorithm*)
        + getAlgorithm(name: const QString&): IThermalAlgorithm*
        + execute(name: const QString&, curve: ThermalCurve*)
        .. signals ..
        + algorithmFinished(curveId: const QString&)
        __
        - AlgorithmService(parent: QObject* = nullptr)
        - ~AlgorithmService()
        - m_algorithms: QMap<QString, IThermalAlgorithm*>
        - m_curveManager: CurveManager*
    }
}

package "Domain Layer" #LemonChiffon {
    interface IThermalAlgorithm {
        + {abstract} ~IThermalAlgorithm()
        + {abstract} process(inputData: const QVector<ThermalDataPoint>&): QVector<ThermalDataPoint>
        + {abstract} name(): QString
        + {abstract} displayName(): QString
        + {abstract} category(): QString
        + {abstract} parameters(): QVariantMap
        + {abstract} setParameter(key: const QString&, value: const QVariant&)
        + {abstract} getOutputSignalType(inputType: SignalType): SignalType
    }

    class ThermalCurve {
        + ThermalCurve(id: QString, name: QString)
        + id(): QString
        + name(): QString
        + projectName(): QString
        + instrumentType(): InstrumentType
        + signalType(): SignalType
        + getRawData(): const QVector<ThermalDataPoint>&
        + getProcessedData(): const QVector<ThermalDataPoint>&
        + getMetadata(): const CurveMetadata&
        + parentId(): QString
        + setName(name: const QString&)
        + setProjectName(projectName: const QString&)
        + setInstrumentType(type: InstrumentType)
        + setSignalType(type: SignalType)
        + setRawData(data: const QVector<ThermalDataPoint>&)
        + setProcessedData(data: const QVector<ThermalDataPoint>&)
        + setMetadata(metadata: const CurveMetadata&)
        + setParentId(parentId: const QString&)
        + getYAxisLabel(): QString
        + getPhysicalQuantityName(): QString
        + resetToRaw()
        __
        - m_id: QString
        - m_name: QString
        - m_projectName: QString
        - m_instrumentType: InstrumentType
        - m_signalType: SignalType
        - m_parentId: QString
        - m_rawData: QVector<ThermalDataPoint>
        - m_processedData: QVector<ThermalDataPoint>
        - m_metadata: CurveMetadata
    }

    struct ThermalDataPoint {
        + temperature: double
        + value: double
        + time: double
        + metadata: QVariantMap
    }
}

package "Infrastructure Layer" #Gainsboro {
    interface IFileReader {
        + {abstract} ~IFileReader()
        + {abstract} canRead(filePath: const QString&): bool
        + {abstract} read(filePath: const QString&, config: const QVariantMap&): ThermalCurve
        + {abstract} supportedFormats(): QStringList
    }

    class DifferentiationAlgorithm {
        + process(inputData: const QVector<ThermalDataPoint>&): QVector<ThermalDataPoint>
        + name(): QString
        + displayName(): QString
        + category(): QString
        + parameters(): QVariantMap
        + setParameter(key: const QString&, value: const QVariant&)
        + getOutputSignalType(inputType: SignalType): SignalType
        __
        - m_halfWin: int
        - m_dt: double
        - m_enableDebug: bool
    }
    class IntegrationAlgorithm {
        + process(inputData: const QVector<ThermalDataPoint>&): QVector<ThermalDataPoint>
        + name(): QString
        ' ... (other overridden methods)
    }
    class MovingAverageFilterAlgorithm {
        + process(inputData: const QVector<ThermalDataPoint>&): QVector<ThermalDataPoint>
        + name(): QString
        ' ... (other overridden methods)
        __
        - m_window: int
    }

    class TextFileReader {
        + TextFileReader()
        + canRead(filePath: const QString&): bool
        + read(filePath: const QString&, config: const QVariantMap&): ThermalCurve
        + supportedFormats(): QStringList
        + readPreview(filePath: const QString&): FilePreviewData
    }

    struct FilePreviewData {
        + header: QString
        + previewContent: QString
        + columns: QStringList
    }
}

' --- Relationships ---
IThermalAlgorithm <|-- DifferentiationAlgorithm
IThermalAlgorithm <|-- IntegrationAlgorithm
IThermalAlgorithm <|-- MovingAverageFilterAlgorithm
IFileReader <|-- TextFileReader

ThermalCurve *-- ThermalDataPoint
CurveTreeModel *-- TreeItem
CurveManager o-- ThermalCurve
CurveManager o-- IFileReader
AlgorithmService o-- IThermalAlgorithm

MainWindow o-- MainController
MainWindow o-- ProjectExplorer
MainWindow o-- PlotWidget
MainWindow o-- CurveTreeModel

MainController o-- CurveManager
MainController o-- AlgorithmService
MainController ..> DataImportWidget : creates & owns

ProjectExplorer ..> CurveTreeModel : uses
PlotWidget ..> CurveManager : uses
CurveTreeModel ..> CurveManager : uses
AlgorithmService ..> CurveManager : uses
DataImportWidget ..> TextFileReader : uses for preview
TextFileReader *-- FilePreviewData

@enduml
